
QListBox now supports multi selection.

QWidget::setBackgroundMode() gives a powerful way of managing widget
backgrounds, to reduce flicker.

QWidget::setIcon() now works under both X11 and Windows.

The file dialog now remembers the previously selected directory.

QApplication::setWinStyleHighlightColor() sets the highligh color in
windows style.

The layout example is new and more informative.

There is a new openGL example; extension/opengl/examples/box/ shows
how to control an openGL widget using Qt user interface components.

****************************************************************************
*      New public/protected functions added to existing classes            *
****************************************************************************

QAccel::repairEventFilter(void)
QApplication::activeModalWidget(void)
QApplication::activePopupWidget(void)
QApplication::allWidgets(void)
QApplication::hasGlobalMouseTracking(void)
QApplication::processEvents(int)
QApplication::processOneEvent(void)
QApplication::setGlobalMouseTracking(bool)
QApplication::setWinStyleHighlightColor(QColor const &)
QApplication::winStyleHighlightColor(void)
QApplication::x11ProcessEvent(_XEvent *)
QBoxLayout::className(void) const
QButton::accel(void) const
QButton::animateClick(void)
QButton::enabledChange(bool)
QButton::setAccel(int)
QComboBox::clearValidator(void)
QComboBox::setStyle(GUIStyle)
QComboBox::setValidator(QValidator *)
QComboBox::validator(void) const
QDir::convertSeparators(char const *)
QFrame::sizeHint(void) const
QGridLayout::addColSpacing(int, int)
QGridLayout::addRowSpacing(int, int)
QGridLayout::className(void) const
QImage::convertDepth(int, int) const
QImage::create(QSize const &, int, int, QImage::Endian)
QImage::createAlphaMask(int) const
QImage::inputFormats(void)
QImage::outputFormats(void)
QImage::pixel(int, int) const
QImage::pixelIndex(int, int) const
QImage::setPixel(int, int, unsigned int)
QImage::valid(int, int) const