@@ -126,6 +126,8 @@ The file dialog now remembers the previously selected directory.
 QApplication::setWinStyleHighlightColor() sets the highligh color in
 windows style.
 
+QApplication::setDoubleClickInterval() sets the double click timeout
+
 The layout example is new and more informative.
 
 There is a new openGL example; extension/opengl/examples/box/ shows
@@ -139,9 +141,11 @@ QAccel::repairEventFilter(void)
 QApplication::activeModalWidget(void)
 QApplication::activePopupWidget(void)
 QApplication::allWidgets(void)
+QApplication::doubleClickInterval(void)
 QApplication::hasGlobalMouseTracking(void)
 QApplication::processEvents(int)
 QApplication::processOneEvent(void)
+QApplication::setDoubleClickInterval(int)
 QApplication::setGlobalMouseTracking(bool)
 QApplication::setWinStyleHighlightColor(QColor const &)
 QApplication::winStyleHighlightColor(void)
